[gd_scene load_steps=2 format=2]

[ext_resource path="res://logic/title_screen.gd" type="Script" id=1]

[node name="TitleScreen" type="PanelContainer"]
margin_right = 360.0
margin_bottom = 640.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 633.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_editor_description_": ""
}

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 336.0
margin_bottom = 616.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/MainContainer"]
margin_right = 326.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 1
text = "Text Game Prototype"
align = 1
valign = 1
autowrap = true

[node name="ButtonsMargin" type="MarginContainer" parent="MarginContainer/MainContainer"]
margin_top = 320.0
margin_right = 326.0
margin_bottom = 572.0
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/ButtonsMargin"]
margin_left = 40.0
margin_right = 286.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 150 )
custom_constants/separation = 15
alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
unique_name_in_owner = true
margin_top = 43.0
margin_right = 246.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 30 )
enabled_focus_mode = 0
text = "Continue"

[node name="NewButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
margin_top = 88.0
margin_right = 246.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 30 )
enabled_focus_mode = 0
text = "New Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
margin_top = 133.0
margin_right = 246.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 30 )
enabled_focus_mode = 0
text = "Options"

[node name="ExtrasButton" type="Button" parent="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer"]
margin_top = 178.0
margin_right = 246.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 30 )
enabled_focus_mode = 0
text = "Extras"

[node name="BottomText" type="Label" parent="MarginContainer/MainContainer"]
margin_top = 592.0
margin_right = 326.0
margin_bottom = 606.0
text = "ver 0.1"
align = 1

[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/ButtonsMargin/ButtonsContainer/ExtrasButton" to="." method="_on_ExtrasButton_pressed"]
